--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -61,7 +61,6 @@
 
     .nav-right {
       display: flex;
-      justify-content: end;
       flex: 25%;
     }
 
