--- a/sass/_switch.scss
+++ b/sass/_switch.scss
@@ -1,4 +1,5 @@
 .switch {
+  margin-left: auto;
   display: flex;
   flex-direction: row;
   height: 26px;
